--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <h1>Welcome to <span class="green">SpotiCry</span></h1>
   <h3>Generate a Spotify report to connect your pain to your music listening history and get personalized recommendations to lift your mood!</h2>
   <div class="button_container">
-    <a href="/report.html"><button>Generate Report</button></a>
+    <a href="/PainScale/report.html"><button>Generate Report</button></a>
   </div>
 
 </body>
